--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE = mongodb://localhost:27017/Lehrerin
+DATABASE = mongodb+srv://geovaunie:acca3147@lehrerin.1zp0s4k.mongodb.net/?retryWrites=true&w=majority
 PORT = 4040
-FRONTEND_URL = http://localhost:4200
+FRONTEND_URL = https://lehrerin-cd967.web.app
 SECRET = @1c2c3@4D11m10c$
